--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -10,8 +10,14 @@ on:
 
 jobs:
   pyinstaller-build:
-    runs-on: windows-latest
+    runs-on: ${{ matrix.os }}
+    strategy:
+      matrix:
+        os: [windows-latest] #, macos-latest, ubuntu-latest]
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
         with:
