--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        os: [windows-latest] #, macos-latest, ubuntu-latest]
+        os: [windows-2019, macos-latest, ubuntu-latest]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
