multi-arch build

--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -24,5 +24,5 @@ jobs:
           python_ver: '3.12'
           spec: 'app.spec'
           requirements: 'requirements.txt'
-          upload_exe_with_name: 'Keuzevakken'
+          upload_exe_with_name: 'keuzevakken-${{ matrix.os }}'
           options: --onefile, --name "Keuzevakken", --windowed,
