--- a/.github/workflows/builder.yaml
+++ b/.github/workflows/builder.yaml
@@ -15,14 +15,11 @@ jobs:
       matrix:
         os: [windows-2019, macos-latest, macos-12, ubuntu-latest]
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-
       - name: Create Executable
         uses: sayyid5416/pyinstaller@v1
         with:
           python_ver: '3.12'
-          spec: 'app.spec'
+          spec: 'app.py'
           requirements: 'requirements.txt'
           upload_exe_with_name: 'keuzevakken-${{ matrix.os }}'
-          options: --onefile, --name "Keuzevakken", --windowed,
+          options: --onefile, --name "keuzevakken", --windowed,
